# hexlet_pytest

./: README.md  pyproject.toml
hexlet_pytest/: example.py
tests/: test_example.py
